Removed All but drivebase

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
     ".classpath": true,
     ".project": true,
     "**/*~": true
-  }
+  },
+  "C_Cpp.default.configurationProvider": "vscode-wpilib"
 }
